[package]
name = "kamasu"
version = "0.2.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1"
native-tls = "0.1"
tls-api = "0.1"
tls-api-openssl = "0.1.9"
futures = "0.1"
httpbis = "0.4.1"
clap = "2"
hyper = { "git" = "https://github.com/hyperium/hyper.git" }
